* choice interaction form finally completed : *  shuffle visibility toggle moved into the widgets/choices/helpers/formElement.js * fixed base deleting state  : getElementToRemove() for choices * pass parent to the data of "deleted" event * always create/remove mini-tlb in question state
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoQtiItem/trunk@19840 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/css/item-creator.css
+++ b/views/css/item-creator.css
@@ -275,7 +275,7 @@ DO NOT EDIT!     * *      '-'-'\_      /'._.'
     .tao-scope .item-editor-item [data-edit].mini-tlb .tlb-button.active, .tao-scope #modalFeedbacks .mini-tlb .tlb-button.active {
       color: #0e5d91 !important; }
     /* line 41, ../scss/item-creator.scss */
-    .tao-scope .item-editor-item [data-edit].mini-tlb .tlb-button [data-role="score"], .tao-scope #modalFeedbacks .mini-tlb .tlb-button [data-role="score"] {
+    .tao-scope .item-editor-item [data-edit].mini-tlb .tlb-button .score, .tao-scope #modalFeedbacks .mini-tlb .tlb-button .score {
       left: 0;
       min-width: 0;
       width: 35px !important;
